samples/_failures_safe/1761598084_83fec9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b9fa5f1a.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_b9fa5f1a.c:167:13: error: expected declaration or statement at end of input
  167 |             left += right;
      |             ^~~~
./samples/SAFE/__tmp_b9fa5f1a.c:167:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b9fa5f1a.c:167:13: error: expected declaration or statement at end of input
